02-argocd/02a-argocd-server/patch_dex_copyutil.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
spec:
  selector:
  template:
    spec:
      containers:
      - command:
        - /shared/argocd-dex
        - rundex
        image: ghcr.io/dexidp/dex:v2.30.0
        imagePullPolicy: IfNotPresent
        name: dex-server
        volumeMounts:
        - mountPath: /shared
          name: static-files
